# Aria

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  makefile
.github/workflows/: cpp.yml
Aria/: Aria.hpp  CMakeLists.txt  config.hpp.in
Aria/agents/: utils.cpp  utils.hpp
Aria/core/: board.cpp  board.hpp  fen.cpp  fen.hpp  log.cpp  log.hpp  piece.cpp  piece.hpp  utils.cpp  utils.hpp
DarkChess/: CMakeLists.txt  DarkChess.hpp  board.cpp  board.hpp  config.hpp.in  log.cpp  log.hpp  piece.cpp  piece.hpp  utils.cpp  utils.hpp
DarkChess/agents/: utils.cpp
DarkChess/core/: board.cpp  board.hpp  fen.cpp  fen.hpp  instrumentation.hpp  log.cpp  log.hpp  piece.cpp  piece.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
dark_chess/: CMakeLists.txt  board.cpp  board.hpp  config.hpp  piece.cpp  piece.hpp  utils.cpp  utils.hpp
ex/: CMakeLists.txt  DarkChessExample  aria.cpp  dark_chess.cpp
ex/basic/: CMakeLists.txt  aria.cpp  dark_chess.cpp
ex/torch/: CMakeLists.txt  aria.cpp  dark_chess.cpp  torch.cpp
src/: board.cpp  board.h  board.hpp  piece.cpp  piece.h  piece.hpp  run.cpp
test/: CMakeLists.txt
test/src/: board.cpp  checks.cpp  fen.cpp  test.cpp
